--- a/Client/src/app/shared/components/Admin/admin-layout.component.html
+++ b/Client/src/app/shared/components/Admin/admin-layout.component.html
@@ -6,6 +6,12 @@
           </span>
           <span class="settingsHolder">
               <h4>Adminstrator</h4>
+              <span class="icon" id="icon" (click)="ChangeToEnglish()">
+                EN
+              </span>
+              <span class="icon" id="icon" (click)="ChangeToArabic()">
+                AR
+              </span>
           </span>
       </div>
   </div>
